--- a/html/Galería.html
+++ b/html/Galería.html
@@ -6,18 +6,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Galería</title>
     <link rel="stylesheet" href="../css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
   <header>
 
-    <nav class="nav1">  
-      <ul>
-        <li>  <a href="../index.html">Home</a> </li>
-        <li>  <a href="../html/Tienda.html">Tienda</a>  </li>
-        <li>  <a href="../html/Galería.html">Galería</a>  </li>
-        <li>  <a href="../html/Nosotros.html">Nosotros</a>  </li>
-        <li>  <a href="../html/Contacto.html">Contacto</a>  </li>
-      </ul>
+    <nav class="navbar sticky-top navbar-expand-lg navbar-dark nav">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="index.html">MateWebsite</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+
+            <li class="nav-item">
+              <a class="nav-link" href="../index.html">Home</a>
+            </li>
+
+            <li class="nav-item">
+              <a class="nav-link" href="Tienda.html">Tienda</a>
+            </li>
+  
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="Galería.html">Galería</a>
+            </li>
+
+            <li class="nav-item">
+              <a class="nav-link" href="Nosotros.html">Nosotros</a>
+            </li>
+
+            <li class="nav-item">
+              <a class="nav-link" href="Contacto.html">Contacto</a>
+            </li>
+  
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </div>
     </nav>
 
   </header>
@@ -71,5 +98,7 @@
   
 </footer>
 
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
