--- a/html/Tienda.html
+++ b/html/Tienda.html
@@ -6,18 +6,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tienda</title>
     <link rel="stylesheet" href="../css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
 
-    <nav class="nav1">  
-      <ul>
-        <li>  <a href="../index.html">Home</a> </li>
-        <li>  <a href="../html/Tienda.html">Tienda</a>  </li>
-        <li>  <a href="../html/Galería.html">Galería</a>  </li>
-        <li>  <a href="../html/Nosotros.html">Nosotros</a>  </li>
-        <li>  <a href="../html/Contacto.html">Contacto</a>  </li>
-      </ul>
-    </nav>
+  <nav class="navbar sticky-top navbar-expand-lg navbar-dark nav">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="index.html">MateWebsite</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link" href="../index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="Tienda.html">Tienda</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="Galería.html">Galería</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="Nosotros.html">Nosotros</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="Contacto.html">Contacto</a>
+          </li>
+
+            </ul>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 
     <header>
       <h1 class="h1Tienda"> Tienda </h1>
@@ -45,41 +67,134 @@
     </form>
    
 
-        <section class="SectionTienda">
+        <section class="container SectionTienda ">
+          <div class="card divTienda" style="width: 20rem; height: 25rem;">
+            <img src="https://images.unsplash.com/photo-1582301172000-1b72abddd10b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=880&q=80" class="card-img-top" alt="...">
+            <div class="card-body cardBody">
+              <p class="card-text">Set de Mate Marmol.</p>
+              <p>$1500</p>
+            </div>
+          </div>
 
-          <div class="divTienda"> <img class="TiendaImg" src="https://images.unsplash.com/photo-1582301172000-1b72abddd10b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=880&q=80" alt=""> <div class="textDiv"> Set Mate</div> <div class="textDiv">$1500</div> </div>
+          <div class="card divTienda" style="width: 20rem; height: 25rem;">
+            <img src="https://images.unsplash.com/photo-1582301172000-1b72abddd10b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=880&q=80" class="card-img-top" alt="...">
+            <div class="card-body cardBody">
+              <p class="card-text">Set de Mate Marmol.</p>
+              <p>$1500</p>
+            </div>
+          </div>
 
-          <div class="divTienda"> <img class="TiendaImg" src="https://http2.mlstatic.com/D_NQ_NP_687546-MLA43870298631_102020-O.webp" alt=""> <div class="textDiv">Mate Imperial</div> <div class="textDiv">$1000</div> </div>
+          <div class="card divTienda" style="width: 20rem; height: 25rem;">
+            <img src="https://images.unsplash.com/photo-1582301172000-1b72abddd10b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=880&q=80" class="card-img-top" alt="...">
+            <div class="card-body cardBody">
+              <p class="card-text">Set de Mate Marmol.</p>
+              <p>$1500</p>
+            </div>
+          </div>
 
-          <div class="divTienda"> <img class="TiendaImg" src="https://http2.mlstatic.com/D_NQ_NP_998836-MLA44022767090_112020-O.webp" alt=""> <div class="textDiv">Mate Madera</div> <div class="textDiv">$900</div> </div>
+          <div class="card divTienda" style="width: 20rem; height: 25rem;">
+            <img src="https://images.unsplash.com/photo-1582301172000-1b72abddd10b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=880&q=80" class="card-img-top" alt="...">
+            <div class="card-body cardBody">
+              <p class="card-text">Set de Mate Marmol.</p>
+              <p>$1500</p>
+            </div>
+          </div>
 
-          <div class="divTienda"> <img class="TiendaImg" src="https://images.unsplash.com/photo-1582301172000-1b72abddd10b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=880&q=80" alt=""> <div class="textDiv"> Set Mate</div> <div class="textDiv">$1500</div> </div>
+          <div class="card divTienda" style="width: 20rem; height: 25rem;">
+            <img src="https://images.unsplash.com/photo-1582301172000-1b72abddd10b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=880&q=80" class="card-img-top" alt="...">
+            <div class="card-body cardBody">
+              <p class="card-text">Set de Mate Marmol.</p>
+              <p>$1500</p>
+            </div>
+          </div>
 
-          <div class="divTienda"> <img class="TiendaImg" src="https://images.unsplash.com/photo-1582301172000-1b72abddd10b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=880&q=80" alt=""> <div class="textDiv"> Set Mate</div> <div class="textDiv">$1500</div> </div>
+          <div class="card divTienda" style="width: 20rem; height: 25rem;">
+            <img src="https://images.unsplash.com/photo-1582301172000-1b72abddd10b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=880&q=80" class="card-img-top" alt="...">
+            <div class="card-body cardBody">
+              <p class="card-text">Set de Mate Marmol.</p>
+              <p>$1500</p>
+            </div>
+          </div>
 
-          <div class="divTienda"> <img class="TiendaImg" src="https://images.unsplash.com/photo-1582301172000-1b72abddd10b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=880&q=80" alt=""> <div class="textDiv"> Set Mate</div> <div class="textDiv">$1500</div> </div>
+          <div class="card divTienda" style="width: 20rem; height: 25rem;">
+            <img src="https://images.unsplash.com/photo-1582301172000-1b72abddd10b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=880&q=80" class="card-img-top" alt="...">
+            <div class="card-body cardBody">
+              <p class="card-text">Set de Mate Marmol.</p>
+              <p>$1500</p>
+            </div>
+          </div>
 
-          <div class="divTienda"> <img class="TiendaImg" src="https://images.unsplash.com/photo-1582301172000-1b72abddd10b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=880&q=80" alt=""> <div class="textDiv"> Set Mate</div> <div class="textDiv">$1500</div> </div>
+          <div class="card divTienda" style="width: 20rem; height: 25rem;">
+            <img src="https://images.unsplash.com/photo-1582301172000-1b72abddd10b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=880&q=80" class="card-img-top" alt="...">
+            <div class="card-body cardBody">
+              <p class="card-text">Set de Mate Marmol.</p>
+              <p>$1500</p>
+            </div>
+          </div>
 
-          <div class="divTienda"> <img class="TiendaImg" src="https://images.unsplash.com/photo-1582301172000-1b72abddd10b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=880&q=80" alt=""> <div class="textDiv"> Set Mate</div> <div class="textDiv">$1500</div> </div>
+          <div class="card divTienda" style="width: 20rem; height: 25rem;">
+            <img src="https://images.unsplash.com/photo-1582301172000-1b72abddd10b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=880&q=80" class="card-img-top" alt="...">
+            <div class="card-body cardBody">
+              <p class="card-text">Set de Mate Marmol.</p>
+              <p>$1500</p>
+            </div>
+          </div>
 
-          <div class="divTienda"> <img class="TiendaImg" src="https://images.unsplash.com/photo-1582301172000-1b72abddd10b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=880&q=80" alt=""> <div class="textDiv"> Set Mate</div> <div class="textDiv">$1500</div> </div>
+          <div class="card divTienda" style="width: 20rem; height: 25rem;">
+            <img src="https://images.unsplash.com/photo-1582301172000-1b72abddd10b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=880&q=80" class="card-img-top" alt="...">
+            <div class="card-body cardBody">
+              <p class="card-text">Set de Mate Marmol.</p>
+              <p>$1500</p>
+            </div>
+          </div>
 
-          <div class="divTienda"> <img class="TiendaImg" src="https://images.unsplash.com/photo-1582301172000-1b72abddd10b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=880&q=80" alt=""> <div class="textDiv"> Set Mate</div> <div class="textDiv">$1500</div> </div>
+          <div class="card divTienda" style="width: 20rem; height: 25rem;">
+            <img src="https://images.unsplash.com/photo-1582301172000-1b72abddd10b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=880&q=80" class="card-img-top" alt="...">
+            <div class="card-body cardBody">
+              <p class="card-text">Set de Mate Marmol.</p>
+              <p>$1500</p>
+            </div>
+          </div>
 
-          <div class="divTienda"> <img class="TiendaImg" src="https://images.unsplash.com/photo-1582301172000-1b72abddd10b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=880&q=80" alt=""> <div class="textDiv"> Set Mate</div> <div class="textDiv">$1500</div> </div>
+          <div class="card divTienda" style="width: 20rem; height: 25rem;">
+            <img src="https://images.unsplash.com/photo-1582301172000-1b72abddd10b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=880&q=80" class="card-img-top" alt="...">
+            <div class="card-body cardBody">
+              <p class="card-text">Set de Mate Marmol.</p>
+              <p>$1500</p>
+            </div>
+          </div>
 
-          <div class="divTienda"> <img class="TiendaImg" src="https://images.unsplash.com/photo-1582301172000-1b72abddd10b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=880&q=80" alt=""> <div class="textDiv"> Set Mate</div> <div class="textDiv">$1500</div> </div>
+          <div class="card divTienda" style="width: 20rem; height: 25rem;">
+            <img src="https://images.unsplash.com/photo-1582301172000-1b72abddd10b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=880&q=80" class="card-img-top" alt="...">
+            <div class="card-body cardBody">
+              <p class="card-text">Set de Mate Marmol.</p>
+              <p>$1500</p>
+            </div>
+          </div>
 
-          <div class="divTienda"> <img class="TiendaImg" src="https://images.unsplash.com/photo-1582301172000-1b72abddd10b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=880&q=80" alt=""> <div class="textDiv"> Set Mate</div> <div class="textDiv">$1500</div> </div>
+          <div class="card divTienda" style="width: 20rem; height: 25rem;">
+            <img src="https://images.unsplash.com/photo-1582301172000-1b72abddd10b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=880&q=80" class="card-img-top" alt="...">
+            <div class="card-body cardBody">
+              <p class="card-text">Set de Mate Marmol.</p>
+              <p>$1500</p>
+            </div>
+          </div>
 
-          <div class="divTienda"> <img class="TiendaImg" src="https://images.unsplash.com/photo-1582301172000-1b72abddd10b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=880&q=80" alt=""> <div class="textDiv"> Set Mate</div> <div class="textDiv">$1500</div> </div>
+          <div class="card divTienda" style="width: 20rem; height: 25rem;">
+            <img src="https://images.unsplash.com/photo-1582301172000-1b72abddd10b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=880&q=80" class="card-img-top" alt="...">
+            <div class="card-body cardBody">
+              <p class="card-text">Set de Mate Marmol.</p>
+              <p>$1500</p>
+            </div>
+          </div>
 
-          <div class="divTienda"> <img class="TiendaImg" src="https://images.unsplash.com/photo-1582301172000-1b72abddd10b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=880&q=80" alt=""> <div class="textDiv"> Set Mate</div> <div class="textDiv">$1500</div> </div>
-
-          
-
-
+          <div class="card divTienda" style="width: 20rem; height: 25rem;">
+            <img src="https://images.unsplash.com/photo-1582301172000-1b72abddd10b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=880&q=80" class="card-img-top" alt="...">
+            <div class="card-body cardBody">
+              <p class="card-text">Set de Mate Marmol.</p>
+              <p>$1500</p>
+            </div>
+          </div>
         </section>
 
 
@@ -97,5 +212,6 @@
   
 </footer>
 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
