Se agregaron animaciones en Tienda y Galería. Se agrego contenido a Nosotros, y hubo cambios de colores en nosotros y contacto.

--- a/html/Contacto.html
+++ b/html/Contacto.html
@@ -52,7 +52,7 @@
 
  <main class="mainContacto">
 
-    <h1 class="h1Contacto">¿En que podemos ayudarte?</h1>
+    <h1 class="h1Contacto">Contactanos</h1>
    
     <section class="container">
 
@@ -64,7 +64,7 @@
 
       <div class="mb-3">
         <label for="exampleInputEmail1" class="form-label">Correo Electronico</label>
-        <input type="email" class="form-control" placeholder="Ingrese su Correo El" id="exampleInputEmail1" aria-describedby="emailHelp">
+        <input type="email" class="form-control" placeholder="Ingrese su Correo Electronico" id="exampleInputEmail1" aria-describedby="emailHelp">
       </div>
 
       <div class="mb-3">
@@ -77,8 +77,8 @@
         <label class="form-check-label" for="exampleCheck1">¿Desea recibir Newsletter?</label>
       </div>
 
-      <button type="submit" class="btn btn-primary">Submit</button>
-      <button type="reset" class="btn btn-primary">Restablecer</button>
+      <button type="submit" class="btn btn-light">Submit</button>
+      <button type="reset" class="btn btn-light">Restablecer</button>
 
     </form>
 
