--- a/html/Tienda.html
+++ b/html/Tienda.html
@@ -67,135 +67,147 @@
     </form>
    
 
-        <section class="container SectionTienda ">
-          <div class="card divTienda" style="width: 20rem; height: 25rem;">
-            <img src="https://images.unsplash.com/photo-1582301172000-1b72abddd10b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=880&q=80" class="card-img-top" alt="...">
-            <div class="card-body cardBody">
-              <p class="card-text">Set de Mate Marmol.</p>
-              <p>$1500</p>
+        <div class="container DivContainer">
+          <div class="row">
+          
+            <div class="col">
+              <div class="card divTienda" style="width: 20rem; height: 25rem;">
+                <img src="https://images.unsplash.com/photo-1582301172000-1b72abddd10b?ixlib=rb-1.2.1&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=880&amp;q=80" class="card-img-top" alt="...">
+                <div class="card-body cardBody">
+                  <p class="card-text">Set de Mate Marmol.</p>
+                  <p>$1500</p>
+                </div>
+              </div>
             </div>
-          </div>
 
-          <div class="card divTienda" style="width: 20rem; height: 25rem;">
-            <img src="https://images.unsplash.com/photo-1582301172000-1b72abddd10b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=880&q=80" class="card-img-top" alt="...">
-            <div class="card-body cardBody">
-              <p class="card-text">Set de Mate Marmol.</p>
-              <p>$1500</p>
-            </div>
-          </div>
+            <div class="col">
+              <div class="card divTienda" style="width: 20rem; height: 25rem;">
+                <img src="https://images.unsplash.com/photo-1582301172000-1b72abddd10b?ixlib=rb-1.2.1&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=880&amp;q=80" class="card-img-top" alt="...">
+                <div class="card-body cardBody">
+                  <p class="card-text">Set de Mate Marmol.</p>
+                  <p>$1500</p>
+                </div>
+              </div>
+           </div>
 
-          <div class="card divTienda" style="width: 20rem; height: 25rem;">
-            <img src="https://images.unsplash.com/photo-1582301172000-1b72abddd10b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=880&q=80" class="card-img-top" alt="...">
-            <div class="card-body cardBody">
-              <p class="card-text">Set de Mate Marmol.</p>
-              <p>$1500</p>
+            <div class="col">
+              <div class="card divTienda" style="width: 20rem; height: 25rem;">
+                <img src="https://images.unsplash.com/photo-1582301172000-1b72abddd10b?ixlib=rb-1.2.1&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=880&amp;q=80" class="card-img-top" alt="...">
+                <div class="card-body cardBody">
+                  <p class="card-text">Set de Mate Marmol.</p>
+                  <p>$1500</p>
+                </div>
+              </div>
             </div>
-          </div>
 
-          <div class="card divTienda" style="width: 20rem; height: 25rem;">
-            <img src="https://images.unsplash.com/photo-1582301172000-1b72abddd10b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=880&q=80" class="card-img-top" alt="...">
-            <div class="card-body cardBody">
-              <p class="card-text">Set de Mate Marmol.</p>
-              <p>$1500</p>
-            </div>
           </div>
+        </div>
 
-          <div class="card divTienda" style="width: 20rem; height: 25rem;">
-            <img src="https://images.unsplash.com/photo-1582301172000-1b72abddd10b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=880&q=80" class="card-img-top" alt="...">
-            <div class="card-body cardBody">
-              <p class="card-text">Set de Mate Marmol.</p>
-              <p>$1500</p>
+        <div class="container DivContainer">
+          <div class="row">
+            <div class="col">
+              <div class="card divTienda" style="width: 20rem; height: 25rem;">
+                <img src="https://images.unsplash.com/photo-1582301172000-1b72abddd10b?ixlib=rb-1.2.1&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=880&amp;q=80" class="card-img-top" alt="...">
+                <div class="card-body cardBody">
+                  <p class="card-text">Set de Mate Marmol.</p>
+                  <p>$1500</p>
+                </div>
+              </div>
             </div>
-          </div>
 
-          <div class="card divTienda" style="width: 20rem; height: 25rem;">
-            <img src="https://images.unsplash.com/photo-1582301172000-1b72abddd10b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=880&q=80" class="card-img-top" alt="...">
-            <div class="card-body cardBody">
-              <p class="card-text">Set de Mate Marmol.</p>
-              <p>$1500</p>
-            </div>
-          </div>
+            <div class="col">
+              <div class="card divTienda" style="width: 20rem; height: 25rem;">
+                <img src="https://images.unsplash.com/photo-1582301172000-1b72abddd10b?ixlib=rb-1.2.1&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=880&amp;q=80" class="card-img-top" alt="...">
+                <div class="card-body cardBody">
+                  <p class="card-text">Set de Mate Marmol.</p>
+                  <p>$1500</p>
+                </div>
+              </div>
+           </div>
 
-          <div class="card divTienda" style="width: 20rem; height: 25rem;">
-            <img src="https://images.unsplash.com/photo-1582301172000-1b72abddd10b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=880&q=80" class="card-img-top" alt="...">
-            <div class="card-body cardBody">
-              <p class="card-text">Set de Mate Marmol.</p>
-              <p>$1500</p>
+            <div class="col">
+              <div class="card divTienda" style="width: 20rem; height: 25rem;">
+                <img src="https://images.unsplash.com/photo-1582301172000-1b72abddd10b?ixlib=rb-1.2.1&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=880&amp;q=80" class="card-img-top" alt="...">
+                <div class="card-body cardBody">
+                  <p class="card-text">Set de Mate Marmol.</p>
+                  <p>$1500</p>
+                </div>
+              </div>
             </div>
-          </div>
 
-          <div class="card divTienda" style="width: 20rem; height: 25rem;">
-            <img src="https://images.unsplash.com/photo-1582301172000-1b72abddd10b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=880&q=80" class="card-img-top" alt="...">
-            <div class="card-body cardBody">
-              <p class="card-text">Set de Mate Marmol.</p>
-              <p>$1500</p>
-            </div>
           </div>
+        </div>
 
-          <div class="card divTienda" style="width: 20rem; height: 25rem;">
-            <img src="https://images.unsplash.com/photo-1582301172000-1b72abddd10b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=880&q=80" class="card-img-top" alt="...">
-            <div class="card-body cardBody">
-              <p class="card-text">Set de Mate Marmol.</p>
-              <p>$1500</p>
+        <div class="container DivContainer">
+          <div class="row">
+            <div class="col">
+              <div class="card divTienda" style="width: 20rem; height: 25rem;">
+                <img src="https://images.unsplash.com/photo-1582301172000-1b72abddd10b?ixlib=rb-1.2.1&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=880&amp;q=80" class="card-img-top" alt="...">
+                <div class="card-body cardBody">
+                  <p class="card-text">Set de Mate Marmol.</p>
+                  <p>$1500</p>
+                </div>
+              </div>
             </div>
-          </div>
 
-          <div class="card divTienda" style="width: 20rem; height: 25rem;">
-            <img src="https://images.unsplash.com/photo-1582301172000-1b72abddd10b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=880&q=80" class="card-img-top" alt="...">
-            <div class="card-body cardBody">
-              <p class="card-text">Set de Mate Marmol.</p>
-              <p>$1500</p>
-            </div>
-          </div>
+            <div class="col">
+              <div class="card divTienda" style="width: 20rem; height: 25rem;">
+                <img src="https://images.unsplash.com/photo-1582301172000-1b72abddd10b?ixlib=rb-1.2.1&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=880&amp;q=80" class="card-img-top" alt="...">
+                <div class="card-body cardBody">
+                  <p class="card-text">Set de Mate Marmol.</p>
+                  <p>$1500</p>
+                </div>
+              </div>
+           </div>
 
-          <div class="card divTienda" style="width: 20rem; height: 25rem;">
-            <img src="https://images.unsplash.com/photo-1582301172000-1b72abddd10b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=880&q=80" class="card-img-top" alt="...">
-            <div class="card-body cardBody">
-              <p class="card-text">Set de Mate Marmol.</p>
-              <p>$1500</p>
+            <div class="col">
+              <div class="card divTienda" style="width: 20rem; height: 25rem;">
+                <img src="https://images.unsplash.com/photo-1582301172000-1b72abddd10b?ixlib=rb-1.2.1&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=880&amp;q=80" class="card-img-top" alt="...">
+                <div class="card-body cardBody">
+                  <p class="card-text">Set de Mate Marmol.</p>
+                  <p>$1500</p>
+                </div>
+              </div>
             </div>
-          </div>
 
-          <div class="card divTienda" style="width: 20rem; height: 25rem;">
-            <img src="https://images.unsplash.com/photo-1582301172000-1b72abddd10b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=880&q=80" class="card-img-top" alt="...">
-            <div class="card-body cardBody">
-              <p class="card-text">Set de Mate Marmol.</p>
-              <p>$1500</p>
-            </div>
           </div>
+        </div>
+        
+        <div class="container DivContainer">
+          <div class="row">
+            <div class="col">
+              <div class="card divTienda" style="width: 20rem; height: 25rem;">
+                <img src="https://images.unsplash.com/photo-1582301172000-1b72abddd10b?ixlib=rb-1.2.1&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=880&amp;q=80" class="card-img-top" alt="...">
+                <div class="card-body cardBody">
+                  <p class="card-text">Set de Mate Marmol.</p>
+                  <p>$1500</p>
+                </div>
+              </div>
+            </div>
 
-          <div class="card divTienda" style="width: 20rem; height: 25rem;">
-            <img src="https://images.unsplash.com/photo-1582301172000-1b72abddd10b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=880&q=80" class="card-img-top" alt="...">
-            <div class="card-body cardBody">
-              <p class="card-text">Set de Mate Marmol.</p>
-              <p>$1500</p>
-            </div>
-          </div>
+            <div class="col">
+              <div class="card divTienda" style="width: 20rem; height: 25rem;">
+                <img src="https://images.unsplash.com/photo-1582301172000-1b72abddd10b?ixlib=rb-1.2.1&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=880&amp;q=80" class="card-img-top" alt="...">
+                <div class="card-body cardBody">
+                  <p class="card-text">Set de Mate Marmol.</p>
+                  <p>$1500</p>
+                </div>
+              </div>
+           </div>
 
-          <div class="card divTienda" style="width: 20rem; height: 25rem;">
-            <img src="https://images.unsplash.com/photo-1582301172000-1b72abddd10b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=880&q=80" class="card-img-top" alt="...">
-            <div class="card-body cardBody">
-              <p class="card-text">Set de Mate Marmol.</p>
-              <p>$1500</p>
+            <div class="col">
+              <div class="card divTienda" style="width: 20rem; height: 25rem;">
+                <img src="https://images.unsplash.com/photo-1582301172000-1b72abddd10b?ixlib=rb-1.2.1&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=880&amp;q=80" class="card-img-top" alt="...">
+                <div class="card-body cardBody">
+                  <p class="card-text">Set de Mate Marmol.</p>
+                  <p>$1500</p>
+                </div>
+              </div>
             </div>
-          </div>
 
-          <div class="card divTienda" style="width: 20rem; height: 25rem;">
-            <img src="https://images.unsplash.com/photo-1582301172000-1b72abddd10b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=880&q=80" class="card-img-top" alt="...">
-            <div class="card-body cardBody">
-              <p class="card-text">Set de Mate Marmol.</p>
-              <p>$1500</p>
-            </div>
           </div>
+        </div>
 
-          <div class="card divTienda" style="width: 20rem; height: 25rem;">
-            <img src="https://images.unsplash.com/photo-1582301172000-1b72abddd10b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=880&q=80" class="card-img-top" alt="...">
-            <div class="card-body cardBody">
-              <p class="card-text">Set de Mate Marmol.</p>
-              <p>$1500</p>
-            </div>
-          </div>
-        </section>
 
 
 
