--- a/html/Galería.html
+++ b/html/Galería.html
@@ -9,8 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
-  <header>
-
+  
     <nav class="navbar sticky-top navbar-expand-lg navbar-dark nav">
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html">MateWebsite</a>
@@ -47,6 +46,9 @@
       </div>
     </nav>
 
+
+  <header>
+
   </header>
 
   <main class="mainGaleria">
@@ -69,7 +71,7 @@
 
        <img class="imgGaleria" src="https://images.unsplash.com/photo-1634741011278-9dc2f5b6fc0b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80" alt="">
 
-       <img class="imgGaleria" src="https://images.unsplash.com/photo-1634741011973-197102232745?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80" alt="">
+       <img class="imgGaleria" src="../img/MateLago.jpeg" alt="">
 
     </section>
 
