--- a/html/Nosotros.html
+++ b/html/Nosotros.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
-  <header>
+
 
     <nav class="navbar sticky-top navbar-expand-lg navbar-dark nav">
       <div class="container-fluid">
@@ -47,13 +47,19 @@
       </div>
     </nav>
     
+
+<header class="Container headerNosotros">
+
+    <img class="BannerNosotros" src="../img/Familia3.jpg" alt="">
+
+
 </header>
 
   <main class="mainNosotros">
 
-    <section class="container">
+    <section class="container sectionNosotros">
       
-      <h1 class="h1Nosotros">¿Quienes somos?</h1>
+      <h1 class="h1Nosotros">Quienes somos</h1>
 
       <p class="Pnosotros">Somos un emprendimiento joven que nacio en la ciudad de neuquen en el año 2020 durante la pandemia con la idea de ofrecer un servicio diferente en la experiencia del mate.</p> 
       <p class="Pnosotros">Nuestros productos estan pensados en la idea de poder compartir momentos y hacerlos unicos. </p>
