Se elimino section2 de index, y se arreglaron medidas de nosotros.html

--- a/html/Nosotros.html
+++ b/html/Nosotros.html
@@ -61,7 +61,7 @@
       
       <h1 class="h1Nosotros">Quienes somos</h1>
 
-      <p class="Pnosotros">Somos un emprendimiento joven que nacio en la ciudad de neuquen en el año 2020 durante la pandemia con la idea de ofrecer un servicio diferente en la experiencia del mate.</p> 
+      <p class="Pnosotros">Somos un emprendimiento familiar que nacio en la ciudad de neuquen en el año 2020 durante la pandemia con la idea de ofrecer un servicio diferente en la experiencia del mate.</p> 
       <p class="Pnosotros">Nuestros productos estan pensados en la idea de poder compartir momentos y hacerlos unicos. </p>
   
   
