Se modifico medidas del html Contacto y se cambio el degrade de home

--- a/html/Tienda.html
+++ b/html/Tienda.html
@@ -63,7 +63,7 @@
     
         Sets <input type="checkbox">
    
-        <input type="submit" value="Aceptar">
+        <button type="submit" class="btn btn-outline-dark btnAceptar">Aceptar</button>
      
     </form>
    
